--- a/configs/sana_config/512ms/Sana_600M_img512.yaml
+++ b/configs/sana_config/512ms/Sana_600M_img512.yaml
@@ -21,7 +21,7 @@ model:
   image_size: 512
   mixed_precision: fp16
   fp32_attention: true
-  load_from:
+  load_from: hf://Efficient-Large-Model/Sana_600M_512px/checkpoints/Sana_600M_512px_MultiLing.pth
   resume_from:
   aspect_ratio_type: ASPECT_RATIO_512
   multi_scale: true
@@ -77,7 +77,7 @@ train:
   num_workers: 10
   seed: 1
   train_batch_size: 128
-  num_epochs: 100
+  num_epochs: 1
   gradient_accumulation_steps: 1
   grad_checkpointing: true
   gradient_clip: 0.1
